feat: adds 13 more apps to my portfolio

--- a/index.html
+++ b/index.html
@@ -118,6 +118,162 @@
 
                     <div class="col-xs-6 col-sm-4">
                         <article class="tile">
+                            <h3 class="projectName">Node.js Event Loop</h3>
+                            <a href="https://nodejs-event-loop-demo.herokuapp.com" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/NodejsEventLoop.png" alt="Node.js Event Loop" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Demo app for better understanding the Node.js event loop.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> Node.js, Express, Vanilla JavaScript, Heroku</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/nodejs-event-loop-demo" target="_blank" rel="noopener noreferrer" aria-label="View 'Node.js Event Loop' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">Tables and Grids</h3>
+                            <a href="../tables-and-grids/storybook-dist/" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/TablesAndGrids.png" alt="Tables and Grids" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Examples and guidance for building accessible tables and grids in React.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> React.js, Storybook</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/tables-and-grids" target="_blank" rel="noopener noreferrer" aria-label="View 'Tables and Grids' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">Article Recommendation Engine</h3>
+                            <a href="https://github.com/thawkin3/article-recommendation-service" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/ArticleRecommendationEngine.png" alt="Article Recommendation Engine" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Similarity search using the Pinecone SDK to find articles that are similar to ones you've read in the past.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> Python, Flask, Pinecone SDK</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/article-recommendation-service" target="_blank" rel="noopener noreferrer" aria-label="View 'Article Recommendation Engine' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">A11y Workshop</h3>
+                            <a href="../a11y-workshop/build/" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/A11yWorkshop.png" alt="A11y Workshop" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Workshop on common accessibility issues, how to identify them, and how to correct them.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> React.js, React Router</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/a11y-workshop" target="_blank" rel="noopener noreferrer" aria-label="View 'A11y Workshop' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">Accessible Tooltips</h3>
+                            <a href="../accessible-tooltips/build/" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/AccessibleTooltips.png" alt="Accessible Tooltips" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Examples and guidance for building accessible tooltips in React.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> React.js</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/accessible-tooltips" target="_blank" rel="noopener noreferrer" aria-label="View 'Accessible Tooltips' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">Nested Interactive Content</h3>
+                            <a href="../a11y-nested-interactive-content/build/" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/NestedInteractiveContent.png" alt="Nested Interactive Content" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Examples and guidance for building accessible nested interactive content in React.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> React.js</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/a11y-nested-interactive-content" target="_blank" rel="noopener noreferrer" aria-label="View 'Nested Interactive Content' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">Card Components</h3>
+                            <a href="../a11y-card-components/build/" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/CardComponents.png" alt="Card Components" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Examples and guidance for building accessible card components in React.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> React.js</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/a11y-card-components" target="_blank" rel="noopener noreferrer" aria-label="View 'Card Components' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">Accessible Listboxes</h3>
+                            <a href="../a11y-listbox/build/" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/AccessibleListboxes.png" alt="Accessible Listboxes" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Examples and guidance for building accessible listboxes in React.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> React.js</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/a11y-listbox" target="_blank" rel="noopener noreferrer" aria-label="View 'Accessible Listboxes' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">Fun Facts SMS</h3>
+                            <a href="https://github.com/thawkin3/fun-facts-sms" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/FunFactsSMS.png" alt="Fun Facts SMS" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">App that allows users to enter their phone number to receive an SMS text with a fun fact.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> Node.js, Express, Infobip API</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/fun-facts-sms" target="_blank" rel="noopener noreferrer" aria-label="View 'Fun Facts SMS' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">NES Games API</h3>
+                            <a href="https://github.com/thawkin3/nes-games-api" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/NESGamesAPI.png" alt="NES Games API" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Simple REST API. Tests written with Insomnia and Inso. Run in a CI pipeline using GitHub Actions.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> Node.js, Express, Insomnia, Inso CLI, GitHub Actions</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/nes-games-api" target="_blank" rel="noopener noreferrer" aria-label="View 'NES Games API' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">API Wrapper Demo</h3>
+                            <a href="../boundaries-demo/build/" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/APIWrapperDemo.png" alt="API Wrapper Demo" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Demo of some concepts from Clean Code, Chapter 8. Thin layers of abstraction and API wrappers.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> React.js, Moment.js, Day.js, date-fns</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/boundaries-demo" target="_blank" rel="noopener noreferrer" aria-label="View 'API Wrapper Demo' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">Plagiarism Checker</h3>
+                            <a href="https://github.com/thawkin3/plagiarism-checker" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/PlagiarismChecker.png" alt="Plagiarism Checker" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Similarity search using the Pinecone SDK to find articles that contain the same or similar content as what's entered by the user.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> Python, Flask, Pinecone SDK</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/plagiarism-checker" target="_blank" rel="noopener noreferrer" aria-label="View 'Plagiarism Checker' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
+                            <h3 class="projectName">Customer Service Chatbot</h3>
+                            <a href="https://github.com/thawkin3/pinecone-demo" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/CustomerServiceChatbot.png" alt="Customer Service Chatbot" /></a>
+                            <div class="projectNotes">
+                                <p class="projectDescription">Similarity search using the Pinecone SDK to find similar questions from a dataset.</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> Python, Flask, Pinecone SDK</p>
+                                <p class="projectRepo"><a href="https://github.com/thawkin3/pinecone-demo" target="_blank" rel="noopener noreferrer" aria-label="View 'Customer Service Chatbot' project in GitHub">View in GitHub</a></p>
+                            </div>
+                        </article>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-4">
+                        <article class="tile">
                             <h3 class="projectName">Readit</h3>
                             <a href="../reddit-clone/build/" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/Readit.png" alt="Readit" /></a>
                             <div class="projectNotes">
@@ -194,7 +350,7 @@
                             <a href="http://unit-price-calculator.herokuapp.com" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/UnitPriceCalculator.png" alt="Unit Price Calculator" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">Uses seven new JavaScript features from ES2020.</p>
-                                <p class="projectBuiltWith"><b>Built with:</b> Vanilla JS, Heroku</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> Vanilla JavaScript, Heroku</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/unit-price-calculator" target="_blank" rel="noopener noreferrer" aria-label="View 'Unit Price Calculator' project in GitHub">View in GitHub</a></p>
                             </div>
                         </article>
@@ -206,7 +362,7 @@
                             <a href="../dom-testing-demo/src/" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/PunGenerator.png" alt="Pun Generator" /></a>
                             <div class="projectNotes">
                                 <p class="projectDescription">View some terrible puns with this app. Experimental test strategy using DOM Testing Library.</p>
-                                <p class="projectBuiltWith"><b>Built with:</b> Vanilla JavaScript</p>
+                                <p class="projectBuiltWith"><b>Built with:</b> Vanilla JavaScript, DOM Testing Library</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/dom-testing-demo" target="_blank" rel="noopener noreferrer" aria-label="View 'Pun Generator' project in GitHub">View in GitHub</a></p>
                             </div>
                         </article>
@@ -887,7 +1043,7 @@
                             <h3 class="projectName">URL Shortener Microservice</h3>
                             <a href="http://tylerhawkins.info:3502/" target="_blank" rel="noopener noreferrer"><img class="img-responsive" src="Images/Thumbnails/URLShortenerMicroservice.png" alt="URL Shortener Microservice" /></a>
                             <div class="projectNotes">
-                                <p class="projectDescription">Microservice similar to bit.ly or tinyURL. Enter a URL and get back a shortened URL which points to your original URL.</p>
+                                <p class="projectDescription">Similar to bit.ly or tinyURL. Enter a URL and get back a shortened URL which points to your original URL.</p>
                                 <p class="projectBuiltWith"><b>Built with:</b> MongoDB, Express, Node.js</p>
                                 <p class="projectRepo"><a href="https://github.com/thawkin3/201R/tree/master/URLShortener" target="_blank" rel="noopener noreferrer" aria-label="View 'URL Shortener Microservice' project in GitHub">View in GitHub</a></p>
                             </div>
