feat: updates metadata for portfolio

--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta charset="UTF-8">
-        <meta name="description" content="I'm a senior software engineer specializing in the MERN/MEAN stack. Check out some of my projects here!">
-        <meta name="keywords" content="web portfolio, hire me, web developer, UI developer, software engineer, senior software engineer, frontend, React, AngularJS, MEAN, MERN, JavaScript, HTML, HTML5, CSS, CSS3, a11y, accessibility">
+        <meta name="description" content="I'm an experienced software engineer, writer, speaker, leader, and accessibility advocate. Check out some of my projects here!">
+        <meta name="keywords" content="web portfolio, hire me, web developer, UI developer, software engineer, senior software engineer, frontend, React, AngularJS, MEAN, MERN, JavaScript, HTML, HTML5, CSS, CSS3, a11y, accessibility, speaker, writer, leader">
         <meta name="author" content="Tyler Hawkins">
         <!-- Google+ -->
         <meta itemprop="name" content="Tyler Hawkins - Web Portfolio">
-        <meta itemprop="description" content="I'm a senior software engineer specializing in the MERN/MEAN stack. Check out some of my projects here!">
+        <meta itemprop="description" content="I'm an experienced software engineer, writer, speaker, leader, and accessibility advocate. Check out some of my projects here!">
         <meta itemprop="image" content="http://tylerhawkins.info/201R/Images/Profile.jpeg">
         <!-- Twitter -->
         <meta name="twitter:title" content="Tyler Hawkins - Web Portfolio">
-        <meta name="twitter:description" content="I'm a senior software engineer specializing in the MERN/MEAN stack. Check out some of my projects here!">
+        <meta name="twitter:description" content="I'm an experienced software engineer, writer, speaker, leader, and accessibility advocate. Check out some of my projects here!">
         <meta name="twitter:image:src" content="http://tylerhawkins.info/201R/Images/Profile.jpeg">
         <!-- Open Graph data -->
         <meta property="og:title" content="Tyler Hawkins - Web Portfolio" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://tylerhawkins.info/201R/" />
         <meta property="og:image" content="http://tylerhawkins.info/201R/Images/Profile.jpeg" />
-        <meta property="og:description" content="I'm a senior software engineer specializing in the MERN/MEAN stack. Check out some of my projects here!" />
+        <meta property="og:description" content="I'm an experienced software engineer, writer, speaker, leader, and accessibility advocate. Check out some of my projects here!" />
         <meta property="og:site_name" content="Tyler Hawkins - Web Portfolio" />
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -1309,7 +1309,7 @@
             <section class="container" id="about">
                 <h2 class="text-uppercase">About</h2>
                 <div class="row">
-                    <p>I’m an experienced software engineer, writer, speaker, leader, and accessibility advocate. I love to write/blog and have written 110+ articles with over 1.5 million page views. I’ve spoken at several tech conferences and have been interviewed on many podcasts as well.</p>
+                    <p>I'm an experienced software engineer, writer, speaker, leader, and accessibility advocate. I love to write/blog and have written 110+ articles with over 1.5 million page views. I've spoken at several tech conferences and have been interviewed on many podcasts as well.</p>
                     <p>I'm self-taught! I have a bachelor's degree in Statistics with a minor in Psychology from Brigham Young University. Mid-way through my undergraduate studies, I took an interest in web development and began teaching myself through online courses such as Udemy, Pluralsight, Codecademy, Khan Academy, HackerRank, and freeCodeCamp. I took a few computer science classes at BYU as well to learn the MEAN stack and excelled at those. I began building web applications in my free time to gain experience and then landed a development job at Qualtrics on their Engineering Services team.</p>
                 	<p>After a few years at Qualtrics, I took a UI Developer role at Younique where I worked with React.js to expand our component library, refactor/improve our website, and establish best practices in UI development for the rest of the company. I spent a lot of time mentoring junior developers and often taught workshops on React, test-driven development, and unit testing. After a year I was promoted to be a Senior UI Developer.</p>
                     <p>In early 2019 I joined Instructure, where I worked on an application called Bridge, which focuses on something near and dear to my heart: employee development and career management. It was here that I discovered my passion for web accessibility.</p>
@@ -1328,10 +1328,10 @@
             <section class="container" id="skills">
                 <h2 class="text-uppercase">Skills</h2>
                 <div class="row">
-                    <p>My main areas of expertise are <b>JavaScript (ES6+)</b>, <b>React</b>, <b>HTML5</b>, and <b>CSS3</b>. <b>Unit testing</b> is extremely important to me. In the React ecosystem, I typically use <b>Jest</b> with <b>React Testing Library</b> to write my tests. I’m passionate about <b>web accessibility</b>, am well-versed in the WCAG docs, and always write code that meets the <b>WCAG 2.1 AA</b> success criteria. I also have experience building <b>design systems</b> and working with the <b>developer tooling</b> involved in maintaining a repo.</p>
+                    <p>My main areas of expertise are <b>JavaScript (ES6+)</b>, <b>React</b>, <b>HTML5</b>, and <b>CSS3</b>. <b>Unit testing</b> is extremely important to me. In the React ecosystem, I typically use <b>Jest</b> with <b>React Testing Library</b> to write my tests. I'm passionate about <b>web accessibility</b>, am well-versed in the WCAG docs, and always write code that meets the <b>WCAG 2.1 AA</b> success criteria. I also have experience building <b>design systems</b> and working with the <b>developer tooling</b> involved in maintaining a repo.</p>
                     <p><b>I love to write/blog and have written over 110 articles with over 1.5 million page views</b> on Medium, Dev.to, Hacker Noon, DZone, and freeCodeCamp. I've spoken at 8 tech conferences, served on the program committee for 2 tech conferences, and been interviewed on 4 podcasts. I frequently present in company-wide engineering trainings and conferences. Teaching, presenting, and mentoring are things that energize me.</p>
                     <p>I enjoy contributing to open-source software and have made commits in several repos: storybook, preact-www, single-spa, front-end-interview-handbook, focus-trap-react, focus-trap, and tabbable.</p>
-                    <p>Other technologies I’ve used are: Babel, Webpack, Rollup, TypeScript, Redux, Node.js, Express, MongoDB, GraphQL, Storybook, jQuery, AngularJS (1.x), PHP, Java, SQL, Git, and JIRA. I'm also an AWS Certified Developer Associate.</p>
+                    <p>Other technologies I've used are: Babel, Webpack, Rollup, TypeScript, Redux, Node.js, Express, MongoDB, GraphQL, Storybook, jQuery, AngularJS (1.x), PHP, Java, SQL, Git, and JIRA. I'm also an AWS Certified Developer Associate.</p>
                 </div>
             </section>
 
