feat: updates web portfolio work experience, about, and skills for 2025

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta charset="UTF-8">
         <meta name="description" content="I'm an experienced software engineer, writer, speaker, leader, and accessibility advocate. Check out some of my projects here!">
-        <meta name="keywords" content="web portfolio, hire me, web developer, UI developer, software engineer, senior software engineer, frontend, React, AngularJS, MEAN, MERN, JavaScript, HTML, HTML5, CSS, CSS3, a11y, accessibility, speaker, writer, leader">
+        <meta name="keywords" content="web portfolio, hire me, web developer, UI developer, software engineer, senior software engineer, staff software engineer, frontend, design systems, developer productivity, developer experience, React, AngularJS, MEAN, MERN, JavaScript, HTML, HTML5, CSS, CSS3, a11y, accessibility, speaker, writer, leader">
         <meta name="author" content="Tyler Hawkins">
         <!-- Google+ -->
         <meta itemprop="name" content="Tyler Hawkins - Web Portfolio">
@@ -56,7 +56,7 @@
                         <span class="icon-bar middle-bar"></span>
                         <span class="icon-bar bottom-bar"></span>
                     </button>
-                    <p class="navbar-brand pull-right">Menu</p>
+                    <p class="navbar-brand pull-right text-uppercase">Menu</p>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <div class="nav navbar-nav">
@@ -65,11 +65,10 @@
                             <li><a href="#webDesign" class="text-uppercase">Website Designs</a></li>
                             <li><a href="#microservices" class="text-uppercase">Microservices</a></li>
                             <li><a href="#dataVisualizations" class="text-uppercase">Data Visualizations</a></li>
-                            <li><a href="#games" class="text-uppercase">Games</a></li>
                         </ul>
                         <ul class="second-list">
+                            <li><a href="#games" class="text-uppercase">Games</a></li>
                             <li><a href="#about" class="text-uppercase">About</a></li>
-                            <li><a href="#skills" class="text-uppercase">Skills</a></li>
                             <li><a href="#work" class="text-uppercase">Work Experience</a></li>
                         </ul>
                     </div>
@@ -1303,49 +1302,39 @@
             <div class="separator">
                 <a class="scroll-link" href="#games"><img src="Images/up.png" alt="Scroll up to previous section (Games)" /></a>
                 <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a class="scroll-link" href="#skills"><img src="Images/down.png" alt="Scroll down to next section (Skills)" /></a>
+                <a class="scroll-link" href="#work"><img src="Images/down.png" alt="Scroll down to next section (Work Experience)" /></a>
             </div>
 
             <section class="container" id="about">
                 <h2 class="text-uppercase">About</h2>
                 <div class="row">
-                    <p>I'm an experienced software engineer, writer, speaker, leader, and accessibility advocate. I love to write/blog and have written 110+ articles with over 1.5 million page views. I've spoken at several tech conferences and have been interviewed on many podcasts as well.</p>
-                    <p>I'm self-taught! I have a bachelor's degree in Statistics with a minor in Psychology from Brigham Young University. Mid-way through my undergraduate studies, I took an interest in web development and began teaching myself through online courses such as Udemy, Pluralsight, Codecademy, Khan Academy, HackerRank, and freeCodeCamp. I took a few computer science classes at BYU as well to learn the MEAN stack and excelled at those. I began building web applications in my free time to gain experience and then landed a development job at Qualtrics on their Engineering Services team.</p>
-                	<p>After a few years at Qualtrics, I took a UI Developer role at Younique where I worked with React.js to expand our component library, refactor/improve our website, and establish best practices in UI development for the rest of the company. I spent a lot of time mentoring junior developers and often taught workshops on React, test-driven development, and unit testing. After a year I was promoted to be a Senior UI Developer.</p>
-                    <p>In early 2019 I joined Instructure, where I worked on an application called Bridge, which focuses on something near and dear to my heart: employee development and career management. It was here that I discovered my passion for web accessibility.</p>
-                    <p>In 2020 I joined Workfront as a Senior Software Engineer. My focuses were on improving our design system, web accessibility, testing practies, and our engineering culture.</p>
-                    <p>In December 2020, Workfront was acquired by Adobe, and I officially became an Adobe employee in February 2021. For about a year and a half in 2021-2022, I led a team of accessibility engineers as we made the Workfront app more usable for everyone. Now I'm back to a somewhat normal senior software engineering role.</p>
-                    <p>My hobbies include reading, writing, snowboarding, biking, skydiving, juggling (fire!), playing drums and keyboard, and spending time with my beautiful wife and kids.</p>
+                    <p>I’m an experienced software engineer, writer, speaker, leader, and accessibility advocate. My background is mostly in developer productivity and developer experience, focusing on design systems, accessibility, developer tooling, automated testing, and CI/CD. I enjoy working on the frontend using React, JavaScript, HTML, and CSS.</p>
+                    <p>I make the people, teams, and companies I work with better. I love teaching, reading, and writing. My 120+ blog posts have been viewed over 2 million times, I’ve spoken at 10+ tech conferences, and I’ve been interviewed as a guest on several podcasts.</p>
+                    <p>In my free time you'll find me playing music with friends (drums), reading, playing games, hiking, biking, and spending time with my wife and kids.</p>
                 </div>
             </section>
 
             <div class="separator">
                 <a class="scroll-link" href="#about"><img src="Images/up.png" alt="Scroll up to previous section (About)" /></a>
                 <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
-                <a class="scroll-link" href="#work"><img src="Images/down.png" alt="Scroll down to next section (Work Experience)" /></a>
-            </div>
-
-            <section class="container" id="skills">
-                <h2 class="text-uppercase">Skills</h2>
-                <div class="row">
-                    <p>My main areas of expertise are <b>JavaScript (ES6+)</b>, <b>React</b>, <b>HTML5</b>, and <b>CSS3</b>. <b>Unit testing</b> is extremely important to me. In the React ecosystem, I typically use <b>Jest</b> with <b>React Testing Library</b> to write my tests. I'm passionate about <b>web accessibility</b>, am well-versed in the WCAG docs, and always write code that meets the <b>WCAG 2.1 AA</b> success criteria. I also have experience building <b>design systems</b> and working with the <b>developer tooling</b> involved in maintaining a repo.</p>
-                    <p><b>I love to write/blog and have written over 110 articles with over 1.5 million page views</b> on Medium, Dev.to, Hacker Noon, DZone, and freeCodeCamp. I've spoken at 8 tech conferences, served on the program committee for 2 tech conferences, and been interviewed on 4 podcasts. I frequently present in company-wide engineering trainings and conferences. Teaching, presenting, and mentoring are things that energize me.</p>
-                    <p>I enjoy contributing to open-source software and have made commits in several repos: storybook, preact-www, single-spa, front-end-interview-handbook, focus-trap-react, focus-trap, and tabbable.</p>
-                    <p>Other technologies I've used are: Babel, Webpack, Rollup, TypeScript, Redux, Node.js, Express, MongoDB, GraphQL, Storybook, jQuery, AngularJS (1.x), PHP, Java, SQL, Git, and JIRA. I'm also an AWS Certified Developer Associate.</p>
-                </div>
-            </section>
-
-            <div class="separator">
-                <a class="scroll-link" href="#skills"><img src="Images/up.png" alt="Scroll up to previous section (Skills)" /></a>
-                <a class="scroll-link" href="#home"><img src="Images/home.png" alt="Scroll to top of page" /></a>
             </div>
 
             <section class="container" id="work">
                 <h2 class="text-uppercase">Work Experience</h2>
                 <div class="row">
+                    <h3 class="job-title text-uppercase">Staff Software Engineer</h3>
+                    <p>Webflow</p>
+                    <p>October 2024 - present</p>
+                </div>
+                <div class="row">
+                    <h3 class="job-title text-uppercase">Senior Software Engineer</h3>
+                    <p>Webflow</p>
+                    <p>June 2023 - October 2024</p>
+                </div>
+                <div class="row">
                     <h3 class="job-title text-uppercase">Senior Software Engineer, Tech Lead</h3>
                     <p>Adobe</p>
-                    <p>February 2021 - present</p>
+                    <p>February 2021 - June 2023</p>
                 </div>
                 <div class="row">
                     <h3 class="job-title text-uppercase">Senior Software Engineer, Tech Lead</h3>
@@ -1396,7 +1385,7 @@
         <footer class="container">
             <div class="footer">
                 <p>Hand-coded by Tyler Hawkins</p>
-                <p>&copy; 2014-2023</p>
+                <p>&copy; 2014-2025</p>
             </div>
         </footer>
     </body>
